# gol-sat

./: .clang-format  CMakeLists.txt  Makefile  README.md
patterns/: 123.txt  smily.txt
src/: commandline.cpp  commandline.h  field.cpp  field.h  formula.cpp  formula.h  main.cpp  pattern.cpp  pattern.h  satSolver.cpp  satSolver.h
